Adicionada política para alterar o file picker para o do KDE

--- a/roles/estacao/templates/firefox-policies.json.j2
+++ b/roles/estacao/templates/firefox-policies.json.j2
@@ -1,5 +1,10 @@
 {
     "policies": {
+	"preferences":{
+		"widget.use-xdg-desktop-portal.file-picker":{
+			"Value": 1
+		}
+	}
         "Bookmarks": [
             {% for bm in firefox_bookmarks %}
             { "Title": "{{ bm.name }}", "URL": "{{ bm.url }}" }{% if not loop.last %}, {% endif %}
